# churn-ml-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  template.py
.dvc/: config
.github/workflows/: cd.yml  ci.yml
data/: .gitignore  processed.dvc  raw.dvc  staged.dvc  transformed.dvc
notebooks/: exploratory_data_analysis.ipynb
reports/feature_engineering/: staged_test_feature_engineering_report.json  staged_train_feature_engineering_report.json
reports/validation/: test_validation_report.json  train_validation_report.json
src/api/: dependencies.py  main.py
src/api/core/: config.py  (+2 more)
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  feature_engineering.py  model_evaluator.py  model_trainer.py  model_tuner.py
src/config/: basic_config.py  data_source_config.py  evaluation_config.py  feature_config.py  mlflow_config.py  prediction_config.py  schema.py  trainer_config.py  transformation_config.py  tuner_config.py
src/constants/: constants.py
src/exception/: __init__.py
src/logging/: logger.py
src/models/: model_wrapper.py
src/pipelines/: prediction_pipeline.py  training_pipeline.py
tests/: conftest.py  test_data_transformation.py  test_data_validation.py  test_feature_engineering.py  test_model_evaluator.py  test_model_trainer.py  test_model_tuner.py
tests/serving/: test_health.py  test_model_info.py  test_predict.py  test_predict_batch.py
tests/training/: test_data_ingestion.py  test_data_transformation.py  test_model_trainer.py  test_model_tuner.py
(+8 files in other folders)
