[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer_churn"
version = "0.1.0"
description = "Customer Churn ML Pipeline"
authors = [{name = "Anujot Singh"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
